# vulkan-learn

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.org  xmake.lua
cmake/: common.cmake  shaders.cmake  tidy.cmake
include/: base_type.hpp  create.hpp  create.tcc  renderer.hpp  scope_guard.hpp  window.hpp
projects/: CMakeLists.txt  xmake.lua
projects/canvas/: CMakeLists.txt  README.org  canvas.cpp  canvas.hpp  main.cpp  main.vert  xmake.lua
projects/canvas/shader/: cell.frag  circle.frag  helloworld.frag  labyrinth.frag  pacman.frag  warping.frag
projects/test/: CMakeLists.txt  main.cpp  xmake.lua
projects/texture/: CMakeLists.txt  main.cpp  main.frag  main.vert  texture.cpp  texture.hpp  xmake.lua
projects/triangle/: CMakeLists.txt  main.cpp  main.frag  main.vert  triangle.cpp  triangle.hpp  xmake.lua
src/: CMakeLists.txt  base_type.cpp  create.cpp  window.cpp  xmake.lua
video/: VulkanCanvas_cell.flv  VulkanCanvas_circle.flv  VulkanCanvas_labyrinth.flv  VulkanCanvas_pacman.flv  VulkanCanvas_warping.flv  VulkanTriangle.flv
xmake/: common.lua  shaders.lua  tidy.lua
